[package]
name = "bevy_mod_progress"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["veritius <veritiusgaming@gmail.com>"]
description = "Convenient, strongly-typed progress tracking."
repository = "https://github.com/veritius/bevy_mod_progress/"
keywords = ["bevy", "gamedev"]

[dependencies.bevy]
version = "0.13"
default-features = false